# auto-reporter-bot

./: .gitignore  README.md  config.json  pyproject.toml
src/: bot.py  config.py  main.py
src/users/: router.py
