[tool.poetry]
name = "auto-reporter-bot"
version = "0.1.0"
description = ""
authors = ["Eugene <to_ev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.7.0"
pydantic-settings = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
